[GitHub Actions] install build-essential
To remove the "dpkg-checkbuilddeps: error: Unmet build dependencies:
build-essential:native" error.

Signed-off-by: Bard Liao <yung-chuan.liao@linux.intel.com>

--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -128,6 +128,11 @@ jobs:
           sudo apt update
           sudo apt install -y debhelper
 
+      - name: Install build-essential
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential
+
       - name: build start
         run: |
           export ARCH=x86_64 KCFLAGS="-Wall -Werror"
